--- a/Makefile.in
+++ b/Makefile.in
@@ -77,13 +77,13 @@ keydctl: keydctl.o onak-conf.o ll.o log.o
 	$(CC) $(LDFLAGS) $(PROGS_LDFLAGS_EXTRA) \
 		-o keydctl keydctl.o onak-conf.o ll.o log.o $(LIBS)
 
-libkeydb_db4.so: keydb_db4.o
+libkeydb_db4.so: keydb_db4.o $(CORE_OBJS)
 	$(CC) -shared $(DB4LIBS) -o libkeydb_db4.so keydb_db4.o $(CORE_OBJS)
 
-libkeydb_pg.so: keydb_pg.o
+libkeydb_pg.so: keydb_pg.o $(CORE_OBJS)
 	$(CC) -shared $(PQLIBS) -o libkeydb_pg.so keydb_pg.o $(CORE_OBJS)
 
-libkeydb_%.so: keydb_%.o
+libkeydb_%.so: keydb_%.o $(CORE_OBJS)
 	$(CC) -shared -o $@ $< $(CORE_OBJS)
 
 splitkeys: splitkeys.o $(CORE_OBJS) $(KEYDB_OBJ)
