--- a/Makefile.in
+++ b/Makefile.in
@@ -16,14 +16,14 @@ MAKEDEPEND = $(CC) -MM
 prefix ?= @prefix@
 exec_prefix ?= @exec_prefix@
 
-PROGS = add lookup gpgwww onak splitkeys onak-mail.pl stripkey
-CORE_OBJS = armor.o charfuncs.o decodekey.o getcgi.o hash.o \
+PROGS = add lookup hashquery gpgwww onak splitkeys onak-mail.pl stripkey
+CORE_OBJS = armor.o charfuncs.o decodekey.o getcgi.o hash.o marshal.o \
 	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o sha1.o md5.o \
 	log.o photoid.o wordlist.o cleanup.o merge.o sendsync.o keyarray.o
 SRCS = armor.c parsekey.c merge.c keyid.c md5.c sha1.c main.c getcgi.c mem.c \
 	keyindex.c stats.c lookup.c add.c keydb_$(DBTYPE).c ll.c hash.c \
 	gpgwww.c onak-conf.c charfuncs.c sendsync.c log.c photoid.c \
-	wordlist.c cleankey.c cleanup.c keyarray.c \
+	wordlist.c cleankey.c cleanup.c keyarray.c hashquery.c marshal.c \
 	$(foreach be,@BACKENDS@,keydb_$(be).c)
 PROGS_LDFLAGS_EXTRA =
 
@@ -109,6 +109,10 @@ stripkey: stripkey.o $(OBJS)
 gpgwww: gpgwww.o $(OBJS)
 	$(CC) $(LDFLAGS) -o gpgwww gpgwww.o $(OBJS) $(LIBS) \
 		$(PROGS_LDFLAGS_EXTRA)
+
+hashquery: hashquery.o $(CORE_OBJS) $(KEYDB_OBJ)
+	$(CC) $(LDFLAGS) -o hashquery hashquery.o $(CORE_OBJS) \
+		$(KEYDB_OBJ) $(LIBS) $(PROGS_LDFLAGS_EXTRA)
 
 lookup: lookup.o cleankey.o $(CORE_OBJS) $(KEYDB_OBJ)
 	$(CC) $(LDFLAGS) -o lookup lookup.o cleankey.o $(CORE_OBJS) \
