Clean up file header copyrights
  Project Purple isn't a legal entity; credit primary author of files
  and include a minimal GPL 2 header in each file rather than relying
  on the copy of LICENCE shipped with everything else.

--- a/onak-mail.pl.in
+++ b/onak-mail.pl.in
@@ -2,8 +2,7 @@
 #
 # onak-mail.pl - Mail processing interface for onak, an OpenPGP Keyserver.
 #
-# Written by Jonathan McDowell <noodles@earth.li>
-# Copyright 2002-2005 Project Purple
+# Copyright 2002-2005 Jonathan McDowell <noodles@earth.li>
 # Released under the GPL.
 #
 
