Use nettle for hashing when available rather than internal MD5/SHA1 routines
  Change the internal MD5/SHA1 routines to match nettle's name and
  calling convention and add suitable autoconf bits to auto-select
  nettle if it's available, otherwise fall back to the internal
  routines as usual.

  Not so much of an issue for MD5/SHA1 (though we might end up with
  more optimised routines in some instances), but allows easier use
  of other hashing/crypto functions in the future.

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ LDFLAGS += @LDFLAGS@
 # Can be "pg" for Postgresql, "file" for flat files or "db2" for pksd db2 style.
 DBTYPE = @DBTYPE@
 #
-LIBS = @LIBS@
+LIBS = @LIBS@ @NETTLE_LIBS@
 DB4LIBS = @DB4LIBS@
 #MAKEDEPEND = makedepend -f- -- 
 MAKEDEPEND = $(CC) -MM
@@ -18,8 +18,11 @@ exec_prefix ?= @exec_prefix@
 
 PROGS = add lookup hashquery gpgwww onak splitkeys onak-mail.pl stripkey
 CORE_OBJS = armor.o charfuncs.o decodekey.o getcgi.o hash.o marshal.o \
-	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o sha1.o md5.o \
+	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o \
 	log.o photoid.o wordlist.o cleanup.o merge.o sendsync.o keyarray.o
+ifeq (x@NETTLE_LIBS@, x)
+CORE_OBJS += md5.o sha1.o
+endif
 SRCS = armor.c parsekey.c merge.c keyid.c md5.c sha1.c main.c getcgi.c mem.c \
 	keyindex.c stats.c lookup.c add.c keydb_$(DBTYPE).c ll.c hash.c \
 	gpgwww.c onak-conf.c charfuncs.c sendsync.c log.c photoid.c \
