--- a/Makefile.in
+++ b/Makefile.in
@@ -18,14 +18,14 @@ exec_prefix ?= @exec_prefix@
 
 PROGS = add lookup hashquery gpgwww onak splitkeys onak-mail.pl stripkey
 CORE_OBJS = armor.o charfuncs.o decodekey.o getcgi.o hash.o marshal.o \
-	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o \
+	keyid.o keyindex.o ll.o mem.o onak-conf.o parsekey.o sigcheck.o \
 	log.o photoid.o wordlist.o cleanup.o merge.o sendsync.o keyarray.o
 ifeq (x@NETTLE_LIBS@, x)
 CORE_OBJS += md5.o sha1.o
 endif
 SRCS = armor.c parsekey.c merge.c keyid.c md5.c sha1.c main.c getcgi.c mem.c \
 	keyindex.c stats.c lookup.c add.c keydb_$(DBTYPE).c ll.c hash.c \
-	gpgwww.c onak-conf.c charfuncs.c sendsync.c log.c photoid.c \
+	gpgwww.c onak-conf.c charfuncs.c sendsync.c log.c photoid.c sigcheck.c \
 	wordlist.c cleankey.c cleanup.c keyarray.c hashquery.c marshal.c \
 	$(foreach be,@BACKENDS@,keydb_$(be).c)
 PROGS_LDFLAGS_EXTRA =
