--- a/Makefile.in
+++ b/Makefile.in
@@ -162,6 +162,9 @@ distclean: clean
 	$(RM) -f Makefile .depend config.log config.status config.h
 	$(RM) -r autom4te.cache
 
+doxygen-docs: *.c *.h Doxyfile
+	doxygen
+
 version.h:
 	@echo '#include "config.h"' > version.h
 	@if [ -e .bzr ]; then \
