Use LDFLAGS when building backend shared objects
The LDFLAGS weren't being passed when linking the backend shared
objects; fix that so things like the hardening flags Debian adds
get uses correctly.

--- a/Makefile.in
+++ b/Makefile.in
@@ -83,16 +83,16 @@ keydctl: keydctl.o onak-conf.o ll.o log.o
 		-o keydctl keydctl.o onak-conf.o ll.o log.o $(LIBS)
 
 libkeydb_db4.so: keydb_db4.o $(CORE_OBJS)
-	$(CC) -shared $(DB4LIBS) -o libkeydb_db4.so keydb_db4.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared $(DB4LIBS) -o libkeydb_db4.so keydb_db4.o $(CORE_OBJS)
 
 libkeydb_hkp.so: keydb_hkp.o $(CORE_OBJS)
-	$(CC) -shared $(CURLLIBS) -o libkeydb_hkp.so keydb_hkp.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared $(CURLLIBS) -o libkeydb_hkp.so keydb_hkp.o $(CORE_OBJS)
 
 libkeydb_pg.so: keydb_pg.o $(CORE_OBJS)
-	$(CC) -shared $(PQLIBS) -o libkeydb_pg.so keydb_pg.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared $(PQLIBS) -o libkeydb_pg.so keydb_pg.o $(CORE_OBJS)
 
 libkeydb_%.so: keydb_%.o $(CORE_OBJS)
-	$(CC) -shared -o $@ $< $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared -o $@ $< $(CORE_OBJS)
 
 splitkeys: splitkeys.o $(CORE_OBJS) $(KEYDB_OBJ)
 	$(CC) $(LDFLAGS) -o splitkeys splitkeys.o $(CORE_OBJS) $(KEYDB_OBJ) \
