--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,16 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-
 DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=dynamic
 
 CFLAGS += -std=gnu99
+
+%:
+	dh "$@"
+
+override_dh_clean:
+	rm -f config.log configure config.h.in aclocal.m4
+	dh_clean
+
+override_dh_auto_configure:
+	autoreconf
+	dh_auto_configure -- ${DEB_CONFIGURE_EXTRA_FLAGS}
