Remove DB2 backend
This was originally for pulling keys from an old pksd keyserver setup.
The code has bit-rotted and no one should have been running pksd for
years now, so just remove the backend entirely. DB4 has been the best
choice for onak backend for some time now.

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,7 +6,7 @@ CC = @CC@
 CFLAGS += @CFLAGS@ -Wall -pedantic -fPIC
 # Uncomment to enable profiling.
 LDFLAGS += @LDFLAGS@
-# Can be "pg" for Postgresql, "file" for flat files or "db2" for pksd db2 style.
+# Can be "pg" for Postgresql, "file" for flat files or "db4" for Berkeley DB.
 DBTYPE = @DBTYPE@
 #
 LIBS = @LIBS@ @NETTLE_LIBS@
