Add keyd support for systemd socket activation
If we have libsystemd-daemon available then enable support for
systemd socket activation of keyd. Even if this support is compiled
in we will fall back to the old behaviour of setting up our own
listening Unix domain socket if systemd is not in use.

--- a/Makefile.in
+++ b/Makefile.in
@@ -78,7 +78,8 @@ endif
 
 keyd: keyd.o $(CORE_OBJS) keydb_$(DBTYPE).o
 	$(CC) $(LDFLAGS) $(PROGS_LDFLAGS_EXTRA) \
-		-o keyd keyd.o $(CORE_OBJS) keydb_$(DBTYPE).o $(LIBS)
+		-o keyd keyd.o $(CORE_OBJS) keydb_$(DBTYPE).o $(LIBS) \
+		@SYSTEMD_LIBS@
 
 keydctl: keydctl.o onak-conf.o ll.o log.o
 	$(CC) $(LDFLAGS) $(PROGS_LDFLAGS_EXTRA) \
