--- a/debian/rules
+++ b/debian/rules
@@ -5,4 +5,11 @@ DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=dynamic
 CFLAGS += -std=gnu99
 
 %:
-	dh "$@" --with autoreconf
+	dh "$@" --with autoreconf,systemd
+
+override_dh_installinit:
+	dh_installinit --no-start
+
+override_dh_systemd_enable:
+	dh_systemd_enable --no-enable debian/onak.service
+	dh_systemd_enable --no-enable debian/onak.socket
