Check for sd_listen_fds in libsystemd as well as libsystemd-daemon
Upstream systemd has moved the sd_listen_fds function from
libsystemd-daemon into a combined libsystemd. For Debian this change
happens in the 214-1 package. Make the autoconf script look in both
and change the Debian build-deps to look for either suitably
recent libsystemd-dev or fall back to libsystemd-daemon-dev (to aid
backports).

--- a/configure.ac
+++ b/configure.ac
@@ -13,9 +13,14 @@ m4_include([m4/ax_lib_nettle.m4])
 AX_LIB_NETTLE(auto)
 AC_CHECK_HEADER([systemd/sd-daemon.h], [
 	AC_CHECK_LIB([systemd-daemon], [sd_listen_fds],
-		[AC_DEFINE([HAVE_SYSTEMD], [1], [systemd-daemon is available])
+		[AC_DEFINE([HAVE_SYSTEMD], [1], [sd_listen_fds is available])
 		AC_SUBST([SYSTEMD_LIBS], [-lsystemd-daemon])
+	],
+	AC_CHECK_LIB([systemd], [sd_listen_fds],
+		[AC_DEFINE([HAVE_SYSTEMD], [1], [sd_listen_fds is available])
+		AC_SUBST([SYSTEMD_LIBS], [-lsystemd])
 	])
+	)
 ])
 
 dnl We should always have these backends available.
