--- a/Makefile.in
+++ b/Makefile.in
@@ -86,13 +86,13 @@ keydctl: keydctl.o onak-conf.o ll.o log.o
 		-o keydctl keydctl.o onak-conf.o ll.o log.o $(LIBS)
 
 libkeydb_db4.so: keydb_db4.o $(CORE_OBJS)
-	$(CC) $(LDFLAGS) -shared $(DB4LIBS) -o libkeydb_db4.so keydb_db4.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared -o libkeydb_db4.so keydb_db4.o $(DB4LIBS) $(CORE_OBJS)
 
 libkeydb_hkp.so: keydb_hkp.o $(CORE_OBJS)
-	$(CC) $(LDFLAGS) -shared $(CURLLIBS) -o libkeydb_hkp.so keydb_hkp.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared -o libkeydb_hkp.so keydb_hkp.o $(CURLLIBS) $(CORE_OBJS)
 
 libkeydb_pg.so: keydb_pg.o $(CORE_OBJS)
-	$(CC) $(LDFLAGS) -shared $(PQLIBS) -o libkeydb_pg.so keydb_pg.o $(CORE_OBJS)
+	$(CC) $(LDFLAGS) -shared -o libkeydb_pg.so keydb_pg.o $(PQLIBS) $(CORE_OBJS)
 
 libkeydb_%.so: keydb_%.o $(CORE_OBJS)
 	$(CC) $(LDFLAGS) -shared -o $@ $< $(CORE_OBJS)
