Update version.h when source files change
Make $(SRCS) a Makefile dependency for version.h so once any of the
source files change we can update our version to reflect this fact.

--- a/Makefile.in
+++ b/Makefile.in
@@ -176,7 +176,7 @@ distclean: clean
 doxygen-docs: *.c *.h Doxyfile
 	doxygen
 
-version.h:
+version.h: $(SRCS)
 	@echo '#include "config.h"' > version.h
 	@if [ -e .git ]; then \
 		echo "#define ONAK_VERSION \"`git describe --tags --dirty | cut -d - -f 2-`\"" \
