Add config option to specify keyd socket directory
keyd was stashing its Unix domain socket in the DB directory, which
is contrary to convention. Add a sock_dir config option and default it
to ${prefix}/var/run in the sample config file.

--- a/onak.conf.in
+++ b/onak.conf.in
@@ -34,6 +34,7 @@ maintainer_email PGP Key Server Administrator <pgp-keyserver-admin@the.earth.li>
 mail_intro_file /community/pgp-keyserver/share/mail_intro
 help_dir /community/pgp-keyserver/share
 mail_dir @STATEDIR@/spool/onak
+sock_dir @STATEDIR@/run
 
 ### If you change this, make sure to put a corresponding help file in
 ### the help_dir named above
