Support --runstatedir with autoconf 2.70+
Rather than putting our socket in $localstatedir/run use $runstatedir
which is support by the Debian package autoconf 2.69-9 and will be in
autoconf 2.70. Fall back to $localstatedir/run when an older version
of autoconf is used.

--- a/configure.ac
+++ b/configure.ac
@@ -85,6 +85,11 @@ then
 	backend="$enable_backend"
 fi
 
+dnl Fallback for autoconf before 2.70
+if test "x$runstatedir" = x; then
+	AC_SUBST([runstatedir], ["$localstatedir/run"])
+fi
+
 AC_SUBST(DBTYPE, $enable_backend)
 AC_SUBST(DB4LIBS, $db4libs)
 AC_SUBST(KEYD, $enable_keyd)
