--- a/Makefile.in
+++ b/Makefile.in
@@ -154,6 +154,7 @@ keydctl.o: keydctl.c keyd.h
 	sed -e 's:@BINDIR@:@bindir@:g' \
 		-e 's:@CONFIG@:@sysconfdir@/onak.conf:g' \
 		-e 's:@LIBDIR@:@libdir@:g' \
+		-e 's:@RUNDIR@:@runstatedir@:g' \
 		-e 's:@SBINDIR@:@sbindir@:g' \
 		-e 's:@STATEDIR@:@localstatedir@:g' \
 		< $< > $@
