--- a/debian/onak.service
+++ b/debian/onak.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=Backend caching key daemon for onak OpenPGP keyserver
 Documentation=man:keyd
-Requires=onak.socket
 
 [Service]
 User=onak
 ExecStart=/usr/sbin/keyd -f
 ExecStop=/usr/bin/keydctl quit
+
+[Install]
+WantedBy=multi-user.target
