Fix errors in onak-mail.pl
The change to the new configuration file format introduced some paper
bag errors in the mail processing script. Fix these, and add a Perl
syntax check into the test target to try and prevent this sort of thing
in future.

--- a/Makefile.in
+++ b/Makefile.in
@@ -56,6 +56,7 @@ all: .depend $(PROGS) testparse maxpath sixdegrees splitkeys onak.ini \
 	wotsap $(BACKENDS)
 
 test: onak $(BACKENDS)
+	perl -cw onak-mail.pl
 	@./runtests
 
 install: $(PROGS) onak.ini $(BACKENDS)
