Cleanup tests to be able to run from a different directory
runtests assumes its run from the directory it lives in, and that this
is the build directory. Improve it to be able to cope with a build in a
different directory to the source and work out the correct paths.

--- a/t/test-in.conf
+++ b/t/test-in.conf
@@ -1,6 +1,6 @@
-pks_bin_dir DIR
-backends_dir DIR
-db_dir DIR/t/db/
+pks_bin_dir BUILDDIR
+backends_dir BUILDDIR
+db_dir WORKDIR/db/
 logfile onak.log
 loglevel 7
 use_keyd false
