--- a/t/test-in.ini
+++ b/t/test-in.ini
@@ -1,6 +1,6 @@
 [main]
 backend=test-DB
-backends_dir=DIR
+backends_dir=BUILDDIR
 logfile=onak.log
 loglevel=7
 use_keyd=false
@@ -8,8 +8,8 @@ max_reply_keys=128
 
 [backend:test-DB]
 type=DB
-location=DIR/t/db/
+location=WORKDIR/db/
 
 [mail]
-bin_dir=DIR
+bin_dir=BUILDDIR
 this_site=pgp-public-keys@localhost
