Move to CMake over autoconf
The auto* tools are hard to work with, and I'd like to split out various
bits of onak into a shared library useful to other projects as well as
various internal helpers (e.g. a backend DB library). To help with that
move over to CMake as a more modern but still widely available build
system.

--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,10 @@
 #!/usr/bin/make -f
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-backend=dynamic --runstatedir=/run
-
 CFLAGS += -std=gnu99
 
 %:
-	dh "$@" --with autoreconf,systemd
+	dh "$@" --with systemd
 
 override_dh_installinit:
 	dh_installinit --no-start
