--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,13 @@ Source: onak
 Section: net
 Priority: optional
 Maintainer: Jonathan McDowell <noodles@earth.li>
-Build-Depends: debhelper (>= 9), dh-autoreconf, dh-systemd, libdb-dev, nettle-dev, libcurl4-gnutls-dev | libcurl-dev, libsystemd-dev (>= 214) [linux-any] | libsystemd-daemon-dev [linux-any]
+Build-Depends: cmake,
+	debhelper (>= 9),
+	dh-systemd,
+	libcurl4-gnutls-dev | libcurl-dev,
+	libdb-dev,
+	libsystemd-dev (>= 214) [linux-any] | libsystemd-daemon-dev [linux-any],
+	nettle-dev
 Standards-Version: 3.9.8.0
 Homepage: https://www.earth.li/projectpurple/progs/onak.html
 Vcs-Browser: https://the.earth.li/gitweb/?p=onak.git;a=summary
