Move Travis to do CMake configure + build
Once more, with feeling, for the move from autoconf to cmake.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ addons:
       - libcurl4-gnutls-dev
       - libsystemd-dev
       - nettle-dev
+before_script:
+  - mkdir travis-build
+  - cd travis-build
+  - cmake ..
+script: make && make test
