Add an OpenPGP keyring backed database backend
Allow the use of an OpenPGP keyring (like keyring.gpg from GnuPG v1) as
a read-only database backend. This is just a collection of keys
concatenated together. The file is mmaped on load and parsed for keys,
then simple linear searches are done for keyids/fingerprints.
Performance with large numbers of keys will not be good.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ endif()
 # Backends
 
 # These have no dependencies and can always be compiled
-set(BACKENDS "file" "fs" "stacked")
+set(BACKENDS "file" "fs" "keyring" "stacked")
 
 # DB4 backend (add check for existence)
 LIST(APPEND BACKENDS db4)
