--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: cmake,
 	libcurl4-gnutls-dev | libcurl-dev,
 	libdb-dev,
 	libsystemd-dev (>= 214) [linux-any] | libsystemd-daemon-dev [linux-any],
-	nettle-dev
+	nettle-dev,
+	pkg-config
 Standards-Version: 3.9.8.0
 Homepage: https://www.earth.li/projectpurple/progs/onak.html
 Vcs-Browser: https://the.earth.li/gitweb/?p=onak.git;a=summary
